Fixed Readability

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -28,6 +28,7 @@ table {
     background-color: #FFFFFF;
     vertical-align: top;
     text-align: left;
+    line-height: 1.4;
 }
 
 .content-na {
@@ -60,10 +61,11 @@ table {
     }
 }
 
+p {
+    line-height: 1.4;
+}
+
 /*
     End style.css
 */
 
-p {
-    line-height: 1.4;
-}
